objects/Route_Processing_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Reconciliation_Status__c</fullName>
        <label>VGT Reconciliation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Bad Meter Read</fullName>
                    <isActive>false</isActive>
                    <label>Bad Meter Read</label>
                </value>
                <value>
                    <fullName>Machine Down</fullName>
                    <isActive>false</isActive>
                    <label>Machine Down</label>
                </value>
                <value>
                    <fullName>No Meters Taken</fullName>
                    <isActive>false</isActive>
                    <label>No Meters Taken</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Possible Missing Can</fullName>
                    <isActive>false</isActive>
                    <label>Possible Missing Can</label>
                </value>
                <value>
                    <fullName>w/ Ram Clear</fullName>
                    <isActive>false</isActive>
                    <label>w/ Ram Clear</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Route Processing Sheets</relationshipLabel>
        <relationshipName>Route_Processing_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redemption_Bill_Test_Completed__c</fullName>
        <label>Redemption Bill Test Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_Terminal_Status__c</fullName>
        <description>@TODO automation sets this based on ?</description>
        <inlineHelpText>@TODO automation sets this based on ?</inlineHelpText>
        <label>Collector RT Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_Type_From_Asset__c</fullName>
        <description>FF to RSA.Redemption_Type_From_Asset__c. The redemption type pulled via analyzing the assets associated with the account (as opposed to the FF that goes from Account and looks at GP Mfgr )</description>
        <formula>Route_Schedule_Account__r.Redemption_Type_From_Asset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FF to RSA.Redemption_Type_From_Asset__c. The redemption type pulled via analyzing the assets associated with the account (as opposed to the FF that goes from Account and looks at GP Mfgr )</inlineHelpText>
        <label>Redemption Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redemption_Type__c</fullName>
        <formula>Account__r.Redemption__r.GP_Manufacturer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redemption Type(Obsolete)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Drop_Total__c</fullName>
        <label>Reject Drop Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reject_Total__c</fullName>
        <label>Reject Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replenishment_Type__c</fullName>
        <label>Replenishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Audit</fullName>
                    <default>true</default>
                    <label>Full Audit</label>
                </value>
                <value>
                    <fullName>Cash Fill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exists in case we want to artificially roll up values to Route Account.</description>
        <inlineHelpText>Exists in case we want to artificially roll up values to Route Account.</inlineHelpText>
        <label>Route Account</label>
        <referenceTo>Route_Account__c</referenceTo>
        <relationshipLabel>Route Processing Sheets</relationshipLabel>
        <relationshipName>Route_Processing_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Current_Geolocation__c</fullName>
        <description>A FF pointing to the route current geolocation expressed as text of lat,lng if  Route_Schedule__r.Route__r</description>
        <formula>TEXT(  Route_Schedule__r.Route__r.Geolocation__Latitude__s) &amp; &apos;,&apos; &amp; TEXT(  Route_Schedule__r.Route__r.Geolocation__Longitude__s )</formula>
        <inlineHelpText>Formula pointing to the route (associated with the route schedule) current geolocation expressed as text of lat,lng</inlineHelpText>
        <label>Route Current Geolocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_End_Email_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Internal field indicating the user that last send the route end email for this RPS.</description>
        <inlineHelpText>Internal field indicating the user that last send the route end email for this RPS.</inlineHelpText>
        <label>Route End Email Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_End_Email_Sent_Date__c</fullName>
        <description>Internal field indicating when the user hit the route send email button.</description>
        <inlineHelpText>Internal field indicating when the user hit the route send email button.</inlineHelpText>
        <label>Route End Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Route_Fill_Date__c</fullName>
        <description>not sure?</description>
        <inlineHelpText>not sure?</inlineHelpText>
        <label>Route Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Route_Name__c</fullName>
        <description>A FF To Route_Schedule__r.Route__r.Name</description>
        <formula>Route_Schedule__r.Route__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A formula field to the route associated with the route schedule of this record.</inlineHelpText>
        <label>Route Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Schedule_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exists in case we want to roll up info to RSA</description>
        <inlineHelpText>Exists in case we want to roll up info to RSA</inlineHelpText>
        <label>Route Schedule Account</label>
        <referenceTo>Route_Schedule_Account__c</referenceTo>
        <relationshipLabel>Route Processing Sheets</relationshipLabel>
        <relationshipName>Route_Processing_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Schedule__c</fullName>
        <label>Route Schedule</label>
        <referenceTo>Route_Schedule__c</referenceTo>
        <relationshipLabel>Route Processing Sheets</relationshipLabel>
        <relationshipName>Route_Processing_Sheets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Snapshot_Cassette__c</fullName>
        <label>Snapshot Cassette</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Snapshot_New_Cassette__c</fullName>
        <label>Snapshot New Cassette</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_RT_Replenishment_Date__c</fullName>
        <description>POC For Billy</description>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>Start RT Replenishment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_RT_Replenishment_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POC For Billy</description>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>Start RT Replenishment User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_VGT_Collection_Date__c</fullName>
        <description>POC For Billy</description>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>Start VGT Collection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_VGT_Collection_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POC For Billy</description>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>Start VGT Collection User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Processing_Sheets7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Collection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stop Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Completed__c</fullName>
        <description>Pending Bus Reqs.. This indicates a survey has at least been partially filled out.</description>
        <formula>NOT( ISBLANK(Notes_Text_Area__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pending Bus Reqs.. This indicates a survey has at least been partially filled out.</inlineHelpText>
        <label>Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Question_PL_Test_1__c</fullName>
        <description>afdasf</description>
        <inlineHelpText>asdf</inlineHelpText>
        <label>Survey Question PL Test 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Val A</fullName>
                </value>
                <value>
                    <fullName>Val B</fullName>
                </value>
                <value>
                    <fullName>Val C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Questions_Date_Test_1__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Survey Questions Date Test 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Meter_Readings__c</fullName>
        <defaultValue>0</defaultValue>
        <description>dlrs maintained</description>
        <inlineHelpText>dlrs maintained</inlineHelpText>
        <label>Total Completed Meter Readings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Drop__c</fullName>
        <description>Quick Demo formula didn&apos;t know what other field to use</description>
        <formula>IF(ISBLANK(Cassette_1_Note_Count_Drop__c),0,Cassette_1_Note_Count_Drop__c) * 1 +
IF(ISBLANK(Cassette_5_Note_Count_Drop__c),0,Cassette_5_Note_Count_Drop__c) * 5 +
IF(ISBLANK(Cassette_20_Note_Count_Drop__c),0,Cassette_20_Note_Count_Drop__c) * 20 +
IF(ISBLANK(Cassette_100_Note_Count_Drop__c),0,Cassette_100_Note_Count_Drop__c) * 100 +
IF(ISBLANK(Reject_Drop_Total__c),0,Reject_Drop_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quick Demo formula didn&apos;t know what other field to use</inlineHelpText>
        <label>Total Drop</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_JCM_BV_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DLRS Maintained. Asset.BV_Type__c</description>
        <inlineHelpText>DLRS Maintained. Asset.BV_Type__c</inlineHelpText>
        <label>Total JCM BV Type</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_MEI_BV_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DLRS Maintained</description>
        <inlineHelpText>DLRS Maintained</inlineHelpText>
        <label>Total MEI BV Type</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_MEI_Small_BV_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DLRS Maintained.</description>
        <inlineHelpText>DLRS Maintained.</inlineHelpText>
        <label>Total MEI Small BV Type</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Meter_Readings__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Number of Meter Readings Associated with this Route Processing Sheet. (DLRS Maintained). Currently async.. ie runs once an hour on the hour.</description>
        <inlineHelpText>Total Number of Meter Readings Associated with this Route Processing Sheet. (DLRS Maintained) This is refreshed once an hour at the top of the hour</inlineHelpText>
        <label>Total Meter Readings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Processing_Completed_Meter_Reading__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DLRS Maintained</description>
        <inlineHelpText>DLRS Maintained</inlineHelpText>
        <label>Total Processing Completed Meter Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_RT_Onsite_Time__c</fullName>
        <description>RT Total Time Onsite</description>
        <formula>(  ( End_RT_Replenishment_Date__c   ) -  (  Start_RT_Replenishment_Date__c  )  )  * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total RT Onsite Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_RT_Replenishment_Time_Mins__c</fullName>
        <description>POC For Billy</description>
        <formula>IF(
  End_RT_Replenishment_Date__c - Start_RT_Replenishment_Date__c &gt; 0 ,
  ROUND( MOD( (End_RT_Replenishment_Date__c - Start_RT_Replenishment_Date__c ) * 24 * 60, 60 ), 0 ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>POC For Billy</inlineHelpText>
        <label>Total RT Replenishment Time (Mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_VGT_Time_Mins__c</fullName>
        <description>poc for billy</description>
        <formula>IF(
 End_VGT_Collection_Date__c - Start_VGT_Collection_Date__c &gt; 0 ,
ROUND( MOD( (End_VGT_Collection_Date__c - Start_VGT_Collection_Date__c) * 24 * 60, 60 ), 0 ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>poc for billy</inlineHelpText>
        <label>Total VGT Time (Mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treasury_RT_Status__c</fullName>
        <label>Treasury RT Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>e-fill</fullName>
                </value>
                <value>
                    <fullName>Processing Error-Cassettes Swapped</fullName>
                </value>
                <value>
                    <fullName>Collector Error-Counts Entered Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Rejects Not Brought Back</fullName>
                </value>
                <value>
                    <fullName>Used Back Office Totals</fullName>
                </value>
                <value>
                    <fullName>Other﻿</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VGT_Actual_Drop__c</fullName>
        <formula>(X1_Note_Count_Grand_Total__c * 1) +  (X5_Note_Count_Grand_Total__c * 5) +  (X10_Note_Count_Grand_Total__c * 10) +  (X20_Note_Count_Grand_Total__c * 20) + (X50_Note_Count_Grand_Total__c * 50) + (X100_Note_Count_Grand_Total__c * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VGT Actual Drop</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VGT_Incoming_Total__c</fullName>
        <formula>VGT_Actual_Drop__c + BV_Drop_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VGT Incoming Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VGT_Reconciliation_Notes__c</fullName>
        <label>VGT Reconciliation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VGT_Variance_Reason__c</fullName>
        <label>VGT Variance Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>w/ Ram Clear</fullName>
                </value>
                <value>
                    <fullName>Bad Meter Read</fullName>
                </value>
                <value>
                    <fullName>Machine Down</fullName>
                </value>
                <value>
                    <fullName>Possible Missing Can</fullName>
                </value>
                <value>
                    <fullName>No Meters Taken</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Offset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>VGT_Actual_Drop__c  - (Expected_Drop__c + BV_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VGT Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X100_Note_Count_Grand_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$100 Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X100_Note_Value_Outbound__c</fullName>
        <formula>Cassette_100_Note_Count_Outbound__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$100 Note Value Outbound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X10_Note_Count_Grand_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$10 Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Note_Count_Grand_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$1 Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Note_Value_Outbound__c</fullName>
        <formula>Cassette_1_Note_Count_Outbound__c * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$1 Note Value Outbound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X20_Note_Value_Outbound__c</fullName>
        <formula>Cassette_20_Note_Count_Outbound__c * 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$20 Note Value Outbound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Route Processing Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Collection_Date__c</columns>
        <columns>Account__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collector_RT_Status_Last_Modified_By__c</columns>
        <columns>RT_Reconciliation_Status__c</columns>
        <columns>Previous_RT_Collection__c</columns>
        <columns>Reconciliation_Status__c</columns>
        <columns>Previous_VGT_Collection__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Display_BV_Type_Info</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <columns>Total_JCM_BV_Type__c</columns>
        <columns>Total_MEI_BV_Type__c</columns>
        <columns>Total_MEI_Small_BV_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Name__c</field>
            <operation>notContain</operation>
            <value>DEV TEST</value>
        </filters>
        <label>All - Display BV Type Info</label>
    </listViews>
    <listViews>
        <fullName>Collected_this_Week</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>RT_Variance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <label>Collected this Week</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Today_Burr_Ridge</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Stop_Number__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Replenishment_Type__c</columns>
        <columns>Redemption_Type_From_Asset__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Burr Ridge</value>
        </filters>
        <label>Collecting Today Burr Ridge</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Today_Collinsville</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Replenishment_Type__c</columns>
        <columns>Redemption_Type_From_Asset__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Processing_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Collinsville</value>
        </filters>
        <label>Collecting Today Collinsville</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Today_Peoria</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Stop_Number__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Replenishment_Type__c</columns>
        <columns>Redemption_Type_From_Asset__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Peoria</value>
        </filters>
        <label>Collecting Today Peoria</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Today_Rockford</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Replenishment_Type__c</columns>
        <columns>Redemption_Type_From_Asset__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Rockford</value>
        </filters>
        <label>Collecting Today Rockford</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Today_Springfield</fullName>
        <columns>Route_Schedule__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Stop_Number__c</columns>
        <columns>City__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Replenishment_Type__c</columns>
        <columns>Redemption_Type_From_Asset__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Springfield</value>
        </filters>
        <label>Collecting Today Springfield</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Today_Tinley_Park</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Replenishment_Type__c</columns>
        <columns>Redemption_Type_From_Asset__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Tinley Park</value>
        </filters>
        <label>Collecting Today Tinley Park</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Today_Utilization</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>City__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Start_VGT_Collection_Date__c</columns>
        <columns>End_VGT_Collection_Date__c</columns>
        <columns>End_VGT_Collection_User__c</columns>
        <columns>Start_RT_Replenishment_Date__c</columns>
        <columns>End_RT_Replenishment_Date__c</columns>
        <columns>End_RT_Replenishment_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Collecting Utilization</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Tomorrow</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Collecting Tomorrow</label>
    </listViews>
    <listViews>
        <fullName>Collecting_Tomorrow_Burr_Ridge</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Processing_Process_Status__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Collection_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Burr Ridge</value>
        </filters>
        <label>Collecting Tomorrow Burr Ridge</label>
    </listViews>
</CustomObject>